test/libyul/yulSyntaxTests/invalid/swap_disallowed.yul
{
    swap0()
    swap1()
    swap2()
    swap3()
    swap4()
    swap5()
    swap6()
    swap7()
    swap8()
    swap9()
    swap10()
    swap11()
    swap12()
    swap13()
    swap14()
    swap15()
    swap16()
    swap32()
}
// ----
// DeclarationError 4619: (6-11): Function not found.
// DeclarationError 4619: (18-23): Function not found.
// DeclarationError 4619: (30-35): Function not found.
// DeclarationError 4619: (42-47): Function not found.
// DeclarationError 4619: (54-59): Function not found.
// DeclarationError 4619: (66-71): Function not found.
// DeclarationError 4619: (78-83): Function not found.
// DeclarationError 4619: (90-95): Function not found.
// DeclarationError 4619: (102-107): Function not found.
// DeclarationError 4619: (114-119): Function not found.
// DeclarationError 4619: (126-132): Function not found.
// DeclarationError 4619: (139-145): Function not found.
// DeclarationError 4619: (152-158): Function not found.
// DeclarationError 4619: (165-171): Function not found.
// DeclarationError 4619: (178-184): Function not found.
// DeclarationError 4619: (191-197): Function not found.
// DeclarationError 4619: (204-210): Function not found.
// DeclarationError 4619: (217-223): Function not found.
